--- a/demo/package.json
+++ b/demo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "gh-pages": "^0.12.0",
-    "react-scripts": "0.8.5"
+    "react-scripts": "^1.1.5"
   },
   "dependencies": {
     "react": "^15.4.2",
